--- a/student-db/src/App.css
+++ b/student-db/src/App.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -6,8 +6,105 @@
   color: inherit;
   text-align: center;
   /* font-size: 10px; */
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
-a{
-  margin: 10px;
+.app-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+header {
+  box-shadow: 0px 2px 5px 1px rgba(3, 2, 2, 0.1);
+}
+.nav-bar {
+  margin: 0px auto;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 700;
+}
+
+.nav-links {
+  margin: 0 15px;
+  color: #7f7f7f;
+}
+.nav-links a {
+  margin: 0 15px;
+}
+.nav-links a:hover {
+  color: black;
+}
+.active-link {
+  color: black;
+  font-weight: 700;
+}
+
+.ass-list {
+  width: max-content;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 150px;
+  overflow: auto;
+}
+
+.displays {
+  position: absolute;
+  z-index: 100;
+  top: 13%;
+  left: 17%;
+  width: 90%;
+  display: flex;
+  margin: 5px auto;
+  justify-content: flex-start;
+  align-items: center;
+}
+.form-displays {
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.input-form {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-direction: column;
+}
+
+label {
+  margin: 5px 10px;
+}
+input {
+  margin-left: 10px;
+  width: 15px;
+  height: 15px;
+}
+
+.btn-linechart {
+  padding: 5px 20px;
+  outline: none;
+
+  background: #508bc8;
+  color: white;
+  border: none;
+  /* padding: 0; */
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
+.btn-linechart:disabled {
+  cursor: not-allowed;
+  background: #585858;
+}
+
+svg {
+  margin-top: 100px;
 }
